glibc (2.3.6.ds1-10) UNRELEASED; urgency=low

  * sysdeps/kfreebsd.mk: Link all machine*/ directories to support
    new bi-arch headers.

 -- Aurelien Jarno <aurel32@debian.org>  Tue,  2 Jan 2007 03:13:54 +0100

glibc (2.3.6.ds1-9) unstable; urgency=low

  [ Aurelien Jarno ]
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1775 (from
    glibc-bsd).
  * debian/po/eu.po: new file, thanks to Piarres Beobide.  Closes: #398984.
  * debian/wrapper/objcopy: remove useless .debug_loc (patch from Daniel
    Jacobowitz).  Closes: #399217.
  * debian/po/de.po: Fix German translation.  Closes: #372817.

  [ Michael Banck ]
  * patches/hurd-i386/submitted-futimes.diff: Moved to ...
  * patches/hurd-i386/cvs-futimes.diff: ... here, updated with the
    version committed upstream by Roland McGrath.

 -- Aurelien Jarno <aurel32@debian.org>  Thu,  7 Dec 2006 11:27:42 +0100

glibc (2.3.6.ds1-8) unstable; urgency=high

  * any/local-iconv-fix-trampoline.diff: new patch (fix iconvconfig segfault
    when run under exec-shield, PaX or similar) from hlfs.  Closes: #397020.
  * debian/po/ro.po: new file, thanks to Stan Ioan-Eugen.  Closes: #395348.
  * debhelper.in/locales.prerm; debhelper.in/locales.prerm,
    debhelper.in/locales-all.prerm: fixed bad interactions between locales
    and locales-all.  Closes: #396354.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1703 (from
    glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Sat,  4 Nov 2006 23:36:19 +0100

glibc (2.3.6.ds1-7) unstable; urgency=low

  [ Aurelien Jarno ]
  * New any/local-no-pagesize.diff (remove the usage of PAGE_SIZE) by 
    Steve Langasek.  Closes: #394385.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 21 Oct 2006 22:41:39 +0200

glibc (2.3.6.ds1-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * Improve the heuristic used to detect other copy of the C library. Closes:
    #390950.
  * Add m68k/local-pthread_lock.diff (fix deadlock with pthread_spinlock) by