@@ -1,0 +1,21 @@
+Package: libc0.1-i386
+Architecture: kfreebsd-amd64
+Section: libs
+Priority: optional
+Depends: libc0.1 (= ${Source-Version})
+Description: GNU C Library: 32bit shared libraries for AMD64
+ This package includes shared versions of the standard C
+ library and the standard math library, as well as many others.
+ This is the 32bit version of the library, meant for AMD64 systems.
+
+Package: libc0.1-dev-i386
+Architecture: kfreebsd-amd64
+Section: libdevel
+Priority: optional
+Provides: lib32c-dev
+Depends: libc0.1-i386 (= ${Source-Version}), libc0.1-dev (= ${Source-Version}), lib32gcc1
+Description: GNU C Library: 32bit development libraries for AMD64
+ Contains the symlinks and object files needed to compile and link programs
+ which use the standard C library. This is the 32bit version of the
+ library, meant for AMD64 systems.
+
